--- a/delivery-market-admin/src/main/resources/templates/category-list.html
+++ b/delivery-market-admin/src/main/resources/templates/category-list.html
@@ -41,22 +41,48 @@
             </nav>
         </div>
         <div class="col-3 mb-3">
-            <button type="button" class="btn btn-outline-success btn-sm" data-bs-toggle="modal" data-bs-target="#add-category-modal">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
-                    <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"></path>
-                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"></path>
-                </svg>
-                카테고리 추가
-            </button>
+            필터 영역
         </div>
         <div class="col-3 mb-3 offset-6">
-            필터 영역
+            <div class="row">
+                <div class="col-4 p-1">
+                    <button type="button" class="btn btn-outline-success btn-sm w-100" data-bs-toggle="modal" data-bs-target="#add-category-modal">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
+                            <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"></path>
+                            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"></path>
+                        </svg>
+                        추가
+                    </button>
+                </div>
+                <div class="col-4 p-1">
+                    <button type="button" class="btn btn-outline-warning btn-sm w-100" data-bs-toggle="modal" data-bs-target="#edit-category-modal">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                            <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                            <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+                        </svg>
+                        수정
+                    </button>
+                </div>
+                <div class="col-4 p-1">
+                    <button type="button" class="btn btn-outline-danger btn-sm w-100" onclick="delCategory()">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-square" viewBox="0 0 16 16">
+                            <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                            <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8"/>
+                        </svg>
+                        삭제
+                    </button>
+                </div>
+            </div>
+
         </div>
         <div class="col-12">
             <div class="table-responsive small">
-                <table class="table table-striped table-sm">
+                <table class="table table-striped table-sm text-center">
                     <thead>
                     <tr>
+                        <th scope="col">
+                            <input class="form-check-input" type="checkbox" id="all">
+                        </th>
                         <th scope="col">No</th>
                         <th scope="col">상위 카테고리</th>
                         <th scope="col">하위 카테고리</th>
@@ -69,6 +95,9 @@
                     <tbody>
                     <div th:each="category : ${categories}">
                         <tr>
+                            <td>
+                                <input class="form-check-input" type="checkbox" th:id="'category-' + ${category.id}">
+                            </td>
                             <td th:text="${category.id}"></td>
                             <td th:text="${category.name}"></td>
                             <td></td>
@@ -78,11 +107,12 @@
                             <td th:unless="${category.createdAt == category.updatedAt}" th:text="${#temporals.format(category.updatedAt, 'yyyy-MM-dd HH:mm:ss')}"></td>
                             <td th:unless="${category.createdBy == category.createdBy}" th:text="${category.updatedBy.name}"></td>
                             <td th:if="${category.createdBy == category.createdBy}"></td>
-
-
                         </tr>
                         <div th:unless="${category.childCategories.isEmpty()}">
                             <tr th:each="childCategory : ${category.childCategories}">
+                                <td>
+                                    <input class="form-check-input" type="checkbox" th:id="'category-' + ${childCategory.id}">
+                                </td>
                                 <td th:text="${childCategory.id}"></td>
                                 <td></td>
                                 <td th:text="${childCategory.name}"></td>
@@ -99,6 +129,7 @@
                 </table>
             </div>
         </div>
+<!--        TODO: searchValue 기능 사용 시 적용되는지 확인 필요-->
         <div class="col-12">
             <nav id="pagination" aria-label="Page navigation">
                 <ul class="pagination justify-content-center">
