--- a/delivery-market-admin/src/main/resources/templates/goods/category-list.html
+++ b/delivery-market-admin/src/main/resources/templates/goods/category-list.html
@@ -4,46 +4,6 @@
 <body>
 <div th:replace="~{/fragments/sidebar :: sidebar}"></div>
 <div class="content-area">
-
-
-    <div class="modal fade" id="add-category-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" th:fragment="modal">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="add-category-modalLabel">카테고리 추가</h1>
-                    <button type="button" class="btn-close" id="modal-close-btn2" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="col-12 pb-3">
-                            <label for="name" class="form-label">새 카테고리 이름</label>
-                            <input type="text" class="form-control" id="name" name="name" placeholder="이름을 입력해주세요.">
-                        </div>
-                        <div class="col-12 pb-1">
-                            <label class="form-label">하위 카테고리 리스트</label>
-                            <div class="row">
-                                <div class="col-10 pb-3">
-                                    <input type="text" class="form-control" name="childCategory" placeholder="이름을 입력해주세요.">
-                                </div>
-                                <div class="col-2 pb-3">
-                                    <button type="button" class="btn btn-outline-danger  w-100">삭제</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 pb-3">
-                            <button type="button" class="btn btn-outline-success btn-sm w-100">하위 카테고리 추가</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-outline-success" id="add-category-btn">추가</button>
-                    <button type="button" class="btn btn-outline-secondary" id="modal-close-btn1" data-bs-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
     <div class="row">
         <div class="col-12 border-bottom mb-3">
             <nav aria-label="breadcrumb">
@@ -60,13 +20,13 @@
         <div class="col-3 mb-3 offset-6">
             <div class="row">
                 <div class="col-4 p-1">
-                    <button type="button" class="btn btn-outline-success btn-sm w-100" data-bs-toggle="modal" data-bs-target="#add-category-modal">
+                    <a type="button" class="btn btn-outline-success btn-sm w-100" href="/categories/add">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
                             <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"></path>
                             <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"></path>
                         </svg>
                         추가
-                    </button>
+                    </a>
                 </div>
                 <div class="col-4 p-1">
                     <button type="button" class="btn btn-outline-warning btn-sm w-100" data-bs-toggle="modal" data-bs-target="#edit-category-modal">
@@ -172,4 +132,4 @@
 </body>
 </html>
 
-<script src="/js/category.js"></script>
+<script src="/js/category-list.js"></script>
