--- a/delivery-market-admin/src/main/resources/templates/goods/goods-add.html
+++ b/delivery-market-admin/src/main/resources/templates/goods/goods-add.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="~{/fragments/header :: header}"></div>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/summernote@0.8.20/dist/summernote-lite.min.css"
+      integrity="sha256-IKhQVXDfwbVELwiR0ke6dX+pJt0RSmWky3WB2pNx9Hg=" crossorigin="anonymous">
 <body>
 <div th:replace="~{/fragments/sidebar :: sidebar}"></div>
 <div class="content-area">
@@ -15,7 +17,7 @@
             </nav>
         </div>
         <div class="col-12">
-            <form method="POST" enctype="multipart/form-data">
+            <form method="POST" enctype="multipart/form-data" id="goods-form">
                 <div class="row">
                     <div class="accordion">
                         <div class="accordion-item">
@@ -33,35 +35,28 @@
                                         </div>
                                         <div class="col-3 pb-3">
                                             <label for="parentCategoryId" class="form-label">상위 카테고리</label>
-                                            <select id="parentCategoryId" class="form-select" name="categoryId" >
-                                                <option value="">==카테고리==</option>
+                                            <select id="parentCategoryId" class="form-select" name="parentCategoryId" >
+                                                <option value="">--카테고리--</option>
                                                 <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
                                             </select>
                                         </div>
                                         <div class="col-3 pb-3">
-                                            <label for="categoryId" class="form-label">하위 카테고리</label>
-                                            <select id="categoryId" name="categoryId" class="form-select" disabled>
+                                            <label for="childCategoryId" class="form-label">하위 카테고리</label>
+                                            <select id="childCategoryId" name="childCategoryId" class="form-select" disabled>
                                             </select>
                                         </div>
                                         <div class="col-12 pb-3">
                                             <label for="summary" class="form-label">상품 요약 설명</label>
-                                            <textarea id="summary" name="summary" class="form-control" aria-label="With textarea"></textarea>
+                                            <textarea id="summary" name="summary" class="form-control" placeholder="ex) 진짜 갈비로 우려낸 전통 갈비탕"></textarea>
                                         </div>
                                         <div class="col-3 pb-3">
                                             <label for="saleStatus" class="form-label">판매 상태</label>
                                             <select id="saleStatus" name="saleStatus" class="form-select">
-                                                <option value="">==판매 상태==</option>
+                                                <option value="">--판매 상태--</option>
                                                 <option th:each="status : ${saleStatus}" th:value="${status.name}" th:text="${status.status}"></option>
                                             </select>
                                         </div>
-                                        <div class="col-3 pb-3">
-                                            <label for="price" class="form-label">상품 대표 가격</label>
-                                            <div class="input-group mb-3">
-                                                <input type="text" id="price" name="price" class="form-control" aria-label="Amount (to the nearest dollar)">
-                                                <span class="input-group-text">원</span>
-                                            </div>
-                                        </div>
-                                        <div class="col-6 pb-3">
+                                        <div class="col-9 pb-3">
                                             <label for="photo" class="form-label">상품 대표 이미지</label>
                                             <input class="form-control" type="file" id="photo" name="photo">
                                         </div>
@@ -72,20 +67,34 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#goods-discount-input-area" aria-expanded="false" aria-controls="goods-discount-input-area" style="background:white">
-                                    할인 정보
+                                    금액, 할인 정보
                                 </button>
                             </h2>
                             <div id="goods-discount-input-area" class="accordion-collapse collapse show">
                                 <div class="accordion-body">
-
-                                    원산지
-                                    포장타입
-                                    중량/용량
-                                    알레르기 정보
-                                    안내사항
-                                    소비기한
-                                    상품 설명
-                                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <div class="row py-4 px-3">
+                                        <div class="col-4 pb-3">
+                                            <label for="price" class="form-label">상품 대표 가격</label>
+                                            <div class="input-group mb-3">
+                                                <input type="text" id="price" name="price" class="form-control">
+                                                <span class="input-group-text">원</span>
+                                            </div>
+                                        </div>
+                                        <div class="col-4 pb-3">
+                                            <label for="discountPrice" class="form-label">할인된 가격</label>
+                                            <div class="input-group mb-3">
+                                                <input type="text" id="discountPrice" name="discountPrice" class="form-control">
+                                                <span class="input-group-text">원</span>
+                                            </div>
+                                        </div>
+                                        <div class="col-4 pb-3">
+                                            <label for="discountPercent" class="form-label">할인율</label>
+                                            <div class="input-group mb-3">
+                                                <input type="text" id="discountPercent" name="discountPercent" class="form-control">
+                                                <span class="input-group-text">%</span>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -97,15 +106,39 @@
                             </h2>
                             <div id="goods-detail-input-area" class="accordion-collapse collapse show">
                                 <div class="accordion-body">
-
-                                    원산지
-                                    포장타입
-                                    중량/용량
-                                    알레르기 정보
-                                    안내사항
-                                    소비기한
-                                    상품 설명
-                                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <div class="row py-4 px-3">
+                                        <div class="col-12 pb-3">
+                                            <label for="origin" class="form-label">원산지</label>
+                                            <textarea id="origin" name="goodsDetail.origin" class="form-control" placeholder="ex) 한국, 축산물 이력번호가 표시된 제품이며, 이력번호는 수령하시는 상품 패키지에서 확인 가능합니다."></textarea>
+                                        </div>
+                                        <div class="col-12 pb-3">
+                                            <label for="allergyInfo" class="form-label">알레르기</label>
+                                            <textarea id="allergyInfo" name="goodsDetail.allergyInfo" class="form-control" placeholder="ex) 소고기, 대두, 밀, 우유 함유"></textarea>
+                                        </div>
+                                        <div class="col-12 pb-3">
+                                            <label for="guidelines" class="form-label">안내사항</label>
+                                            <textarea id="guidelines" name="goodsDetail.guidelines" class="form-control" placeholder="ex) 뼈 조각이 있을 수 있으니 섭취 시 주의부탁드립니다."></textarea>
+                                        </div>
+                                        <div class="col-12 pb-3">
+                                            <label for="expiryDate" class="form-label">소비기한</label>
+                                            <textarea id="expiryDate" name="goodsDetail.expiryDate" class="form-control" placeholder="ex) 수령일 포함 180일 이상 남은 제품을 보내드립니다. (총 소비기한 365일)"></textarea>
+                                        </div>
+                                        <div class="col-6 pb-3">
+                                            <label for="packagingType" class="form-label">포장 타입</label>
+                                            <select id="packagingType" name="goodsDetail.packagingType" class="form-select">
+                                                <option value="">--포장 타입--</option>
+                                                <option th:each="packaging : ${packagingType}" th:value="${packaging.name}" th:text="${packaging.type}"></option>
+                                            </select>
+                                        </div>
+                                        <div class="col-6 pb-3">
+                                            <label for="weightVolume" class="form-label">중량/용량</label>
+                                            <input type="text" class="form-control" id="weightVolume" name="goodsDetail.weightVolume" placeholder="ex) 1040g / 옵션별 상이">
+                                        </div>
+                                        <div class="col-12 pb-3">
+                                            <label for="summernote" class="form-label">상품 상세 설명</label>
+                                            <textarea id="summernote" name="goodsDetail.description"></textarea>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -116,16 +149,52 @@
                                 </button>
                             </h2>
                             <div id="goods-option-input-area" class="accordion-collapse collapse show">
-                                <div class="accordion-body">
-
-
-                                    옵션 정보
-                                    - 금액
-                                    - 할인 금액
-                                    - 할인율
-                                    - 재고
-                                    - 판매 상태
-                                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                <div class="accordion-body py-3" id="option-fields">
+                                    <a type="button" class="btn btn-outline-success btn-sm w-100" id="addOption">옵션 추가</a>
+                                    <div class="row py-4 px-3 option-field">
+                                        <div class="col-9 pb-3">
+                                            <label for="option-name" class="form-label">이름</label>
+                                            <input id="option-name" name="goodsOptions.name" class="optionName form-control" placeholder="옵션 상품의 이름을 입력해주세요.">
+                                        </div>
+                                        <div class="col-3 pb-3">
+                                            <label class="form-label">판매 상태</label>
+                                            <select name="goodsOptions.saleStatus" class="optionSaleStatus form-select">
+                                                <option value="">--판매 상태--</option>
+                                                <option th:each="status : ${saleStatus}" th:value="${status.name}" th:text="${status.status}"></option>
+                                            </select>
+                                        </div>
+                                        <div class="col-3 pb-3">
+                                            <label class="form-label">상품 금액</label>
+                                            <div class="input-group mb-3">
+                                                <input type="text" name="goodsOptions.price" class="optionPrice form-control">
+                                                <span class="input-group-text">원</span>
+                                            </div>
+                                        </div>
+                                        <div class="col-3 pb-3">
+                                            <label class="form-label">재고</label>
+                                            <div class="input-group mb-3">
+                                                <input type="text" name="goodsOptions.amount" class="optionAmount form-control">
+                                                <span class="input-group-text">개</span>
+                                            </div>
+                                        </div>
+                                        <div class="col-3 pb-3">
+                                            <label class="form-label">할인된 금액</label>
+                                            <div class="input-group mb-3">
+                                                <input type="number" name="goodsOptions.discountPrice" class="optionDiscountPrice form-control">
+                                                <span class="input-group-text">원</span>
+                                            </div>
+                                        </div>
+                                        <div class="col-3 pb-3">
+                                            <label class="form-label">할인율</label>
+                                            <div class="input-group mb-3">
+                                                <input type="number" name="goodsOptions.discountPercent" class="optionDiscountPercent form-control" max="100">
+                                                <span class="input-group-text">%</span>
+                                            </div>
+                                        </div>
+                                        <div class="col-2 pb-3 offset-10">
+                                            <a type="button" class="btn w-100 btn-outline-danger btn-sm" id="delOption">옵션 삭제</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -142,5 +211,13 @@
 </div>
 </body>
 </html>
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.20/dist/summernote-lite.min.js"
+        integrity="sha256-5slxYrL5Ct3mhMAp/dgnb5JSnTYMtkr4dHby34N10qw=" crossorigin="anonymous"></script>
 
+<!-- language pack -->
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.20/dist/lang/summernote-ko-KR.min.js"
+        integrity="sha256-y2bkXLA0VKwUx5hwbBKnaboRThcu7YOFyuYarJbCnoQ=" crossorigin="anonymous"></script>
+
+<script>
+</script>
 <script src="/js/goods.js"></script>
